add upload file to schema. Also uses BadRequest error instead of abort which is preferred and fix typos.
